--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,13 @@ export(data_norm_ers)
 export(data_norm_irs)
 export(data_norm_sl)
 export(data_norm_tmm)
+export(data_pearson_draw)
 export(data_proteins_summary)
+export(data_scale_mat)
 export(data_transform_melt)
 export(data_volcano)
+export(data_volcano_label)
+export(data_zero_substitution_3repeats)
 export(read_maxquant_prot)
 import(RColorBrewer)
 import(edgeR)
